Add solutions to the exercises

--- a/Solutions/Harjoitus_Keras_1.ipynb
+++ b/Solutions/Harjoitus_Keras_1.ipynb
@@ -227,7 +227,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.plot(hist[\"acc\"])\n",
+    "plt.plot(hist[\"accuracy\"])\n",
     "plt.title('Mallin tarkkuus')\n",
     "plt.ylabel('OA')\n",
     "plt.xlabel('Epookki')\n",
@@ -262,7 +262,7 @@
    "outputs": [],
    "source": [
     "# Evaluoi malli\n",
-    "evaluation = model.evaluate(X_test, y_test)\n",
+    "evaluation = model.evaluate(X_test, y_test, verbose=False)\n",
     "print(\"Testijoukon häviö: {:.4f} OA: {:.4f}\".format(evaluation[0], evaluation[1]))"
    ]
   },
@@ -287,7 +287,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tarkastelemalla `y_pred`-oliota huomaat, että yksittäinen alkio onkin luokan sijasta lista todennäköisyyksiä. Ensimmäinen luku on luokan 0 todennäköisyys, toinen luku luokan 1 todennäköisyys ja niin edelleen. Luokitellun luokan saamiseksi on siis otettava suurimman todennäköisyyden saaneen indeksi. Tähän voi käyttää [`np.argmax()`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.argmax.html)-metodia."
+    "Tarkastelemalla `y_pred`-oliota huomaat, että yksittäinen alkio onkin luokan sijasta lista todennäköisyyksiä<sup>1</sup>. \n",
+    "Ensimmäinen luku on luokan 0 todennäköisyys, toinen luku luokan 1 todennäköisyys ja niin edelleen. Luokitellun luokan saamiseksi on siis otettava suurimman todennäköisyyden saaneen indeksi. \n",
+    "Tähän voi käyttää [`np.argmax()`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.argmax.html)-metodia.\n",
+    "\n",
+    "\n",
+    "<sup>1</sup>Myös Scikit-learn-kirjastosta on mahdollista saada todennäköisyysarvot luokkien lisäksi. Joidenkin\n",
+    " algoritmien, kuten SVM:n tapauksessa tällöin on annettava parametri `probability=True` mallia luotaessa."
    ]
   },
   {
@@ -356,7 +362,7 @@
     "    \n",
     "model = build_fn(first_dense_units=100)\n",
     "model.fit(X_train, y_train, epochs=5, batch_size=50)\n",
-    "evaluation = model.evaluate(X_test, y_test)\n",
+    "evaluation = model.evaluate(X_test, y_test, verbose=False)\n",
     "print(\"Testijoukon häviö: {:.4f} OA: {:.4f}\".format(evaluation[0], evaluation[1]))"
    ]
   },
@@ -365,7 +371,9 @@
    "metadata": {},
    "source": [
     "### Mallin tallentaminen\n",
-    "Kuten Scikit-learn:in tapauksessa, myös Keras-malleja voi tallentaa levylle. Neuroverkkojen opettaminen on usein hidasta puuhaa, mutta onneksi myös välituloksia opetuksessa voi tallentaa ja opetusta voi tarvittaessa jatkaa edellisestä kohdasta tallentamalla mallin painot.  \n",
+    "Kuten Scikit-learn:in tapauksessa, myös Keras-malleja voi tallentaa levylle. \n",
+    "Neuroverkkojen opettaminen on usein hidasta puuhaa, mutta onneksi myös välituloksia opetuksessa \n",
+    "voi tallentaa ja opetusta voi tarvittaessa jatkaa edellisestä kohdasta tallentamalla mallin painot.  \n",
     "\n",
     "[Dokumentaation](https://keras.io/callbacks/#modelcheckpoint) perusteella luo `keras.callbacks.ModelCheckpoint`-funktio, joka tallentaa vain parhaat painot tiedostoon \"keras-mnist-model-best-weights.ckpt\""
    ]
@@ -383,7 +391,7 @@
     "\n",
     "model = build_fn()\n",
     "model.fit(X_train, y_train, epochs=5, batch_size=50, callbacks = [cp_callback])\n",
-    "evaluation = model.evaluate(X_test, y_test)\n",
+    "evaluation = model.evaluate(X_test, y_test, verbose=False)\n",
     "print(\"Testijoukon häviö: {:.4f} OA: {:.4f}\".format(evaluation[0], evaluation[1]))"
    ]
   },
@@ -395,13 +403,13 @@
    "source": [
     "# Evaluoi tyhjää mallia\n",
     "model = build_fn()\n",
-    "evaluation = model.evaluate(X_test, y_test)\n",
-    "print(\"Testijoukon häviö: {:.4f} OA: {:.4f}\".format(evaluation[0], evaluation[1]))\n",
+    "evaluation = model.evaluate(X_test, y_test, verbose=False)\n",
+    "print(\"Painottoman mallin Testijoukon häviö: {:.4f} OA: {:.4f}\".format(evaluation[0], evaluation[1]))\n",
     "\n",
     "# Evaluoi mallia painojen lataamisen jälkeen\n",
     "model.load_weights(checkpoint_location)\n",
-    "evaluation = model.evaluate(X_test, y_test)\n",
-    "print(\"Testijoukon häviö: {:.4f} OA: {:.4f}\".format(evaluation[0], evaluation[1]))"
+    "evaluation = model.evaluate(X_test, y_test, verbose=False)\n",
+    "print(\"Painnollisen mallin Testijoukon häviö: {:.4f} OA: {:.4f}\".format(evaluation[0], evaluation[1]))"
    ]
   },
   {
@@ -416,9 +424,15 @@
    "metadata": {},
    "source": [
     "## Scikit-learn yhteensopivuus\n",
-    "Äskeinen hyperparametrien optimointi saattoi tuntua aika manuaaliselta edellisten harjoitusten automatisoitujen keinojen jälkeen. Pystyisiköhän samoja menetelmiä käyttämään myös Keras-mallien kanssa? Kyllä [pystyy](https://keras.io/scikit-learn-api/)! Samoin Keras-mallin voi ottaa käyttöön laajemmassa Scikit-learn ympäristössä  ja siihen voi jopa soveltaa [putkitusta](https://scikit-learn.org/stable/modules/generated/sklearn.pipeline.Pipeline.html), mikä tuo paljon hyötyjä esimerkiksi datan esikäsittelyn (esim. standardtointi, pca) osalta.\n",
+    "Äskeinen hyperparametrien optimointi saattoi tuntua aika manuaaliselta edellisten harjoitusten \n",
+    "automatisoitujen keinojen jälkeen. Pystyisiköhän samoja menetelmiä käyttämään myös Keras-mallien kanssa? \n",
+    "Kyllä [pystyy](https://keras.io/scikit-learn-api/)! Samoin Keras-mallin voi ottaa käyttöön\n",
+    " laajemmassa Scikit-learn ympäristössä  ja siihen voi jopa soveltaa \n",
+    " [putkitusta](https://scikit-learn.org/stable/modules/generated/sklearn.pipeline.Pipeline.html), \n",
+    " mikä tuo paljon hyötyjä esimerkiksi datan esikäsittelyn (esim. standardtointi, pca) osalta.\n",
     "\n",
-    "Luo ensin `clf`-olio [dokumentaation](https://keras.io/scikit-learn-api/) avulla antamatta mitään muita parametreja, kuin `build_fn`.\n",
+    "Luo ensin `clf`-olio [dokumentaation](https://keras.io/scikit-learn-api/) \n",
+    "avulla antamatta mitään muita parametreja, kuin `build_fn`.\n",
     "\n"
    ]
   },
@@ -454,13 +468,8 @@
     "clf.fit(X_train, y_train)\n",
     "print(\"Parhaat parametrit: \", clf.best_params_)\n",
     "print(\"Paras opetus OA: {:.4f}\".format(clf.best_score_))\n",
-    "print(\"OA: {:.4f}\".format(clf.score(X_test, y_test)))"
+    "print(\"OA: {:.4f}\".format(clf.score(X_test, y_test)))\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -521,10 +530,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
