--- a/Solutions/Harjoitus_Sklearn_1.ipynb
+++ b/Solutions/Harjoitus_Sklearn_1.ipynb
@@ -13,13 +13,34 @@
     "$ pip3 install scikit-learn pandas imbalanced-learn matplotlib==2.2.2\n",
     "```\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
+    "## Syntaksi tutuksi\n",
+    "Muuta vapaasti solujen sisältöä kaksoisklikkaamalla niitä. Valitse solu hiirellä ja paina CTRL+Enter ajaaksesi solun. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print('Terve Maailma!')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Motivointia\n",
     "Tämän nopean demon tarkoitus on näyttää miten helposti ja nopeasti kirjaston avulla saa suoritettua suoritettua \n",
     "yksinkertaisen luokittelun."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -52,16 +73,25 @@
    "metadata": {},
    "source": [
     "## Aineiston lataaminen\n",
-    "Suurin osa Pythonin koneoppimiskirjastoista tukee:\n",
+    "Suurin osa Pythonin koneoppimiskirjastoista tukee aineistoja ainakin seuraavissa muodoissa:\n",
     "- Numpy Array\n",
-    "- Pandas \n",
+    "- Pandas Data Frame\n",
     "- listat\n",
     "\n",
-    "Scikit-learn -kirjastossa on myös monia valmiita aineistoja algoritmien ja käsittelyketjujen testaamista varten moduulissa\n",
-    "`sklearn.datasets`. \n",
+    "Moni koneoppimiskirjasto ja kieli sisällyttää muutamia aineistoja valmiina\n",
+    " algoritmien ja käsittelyketjujen testaamista varten.\n",
+    "Aluksi käytetään klassista [Iris](https://en.wikipedia.org/wiki/Iris_flower_data_set)-aineistoa. \n",
+    "Iris sisältää havaintoja Kurjenmiekka-kukkien \n",
+    "neljästä mitatusta parametrista senttimetreinä:\n",
+    "* verholehden (sepal) pituus ja leveys\n",
+    "* terälehden (petal) pituus ja leveys\n",
     "\n",
-    "Lataa aluksi klassinen jo edellisessä harjoituksessa tutuksi tullut [Iris](https://en.wikipedia.org/wiki/Iris_flower_data_set)-aineisto.\n",
-    "Käytä hyväksi [datasets-dokumentaatiota](https://scikit-learn.org/stable/datasets/index.html)."
+    "Näiden lisäksi jokainen havainto sisältää tiedon mihin kolmesta Kurjenmiekka lajista Iris setosa, Iris virginica tai Iris versicolor havainto kuuluu.\n",
+    "\n",
+    "**Ongelma**: Voiko kurjenmiekkalajin tunnistaa verholehden ja terälehden pituuksista ja leveyksistä?\n",
+    "\n",
+    "Lataa aluksi [Iris](https://en.wikipedia.org/wiki/Iris_flower_data_set)-aineisto.\n",
+    "Käytä hyväksi [datasets-dokumentaatiota](https://scikit-learn.org/stable/datasets/index.html).\n"
    ]
   },
   {
@@ -81,7 +111,7 @@
     "dataset = datasets.load_iris() #TODO: None\n",
     "\n",
     "print(dataset.DESCR)\n",
-    "print(\"Firt 5 rows:\\n\", dataset.data[:5])"
+    "print(\"Ensimmäiset 5 havaintoa:\\n\", dataset.data[:5])"
    ]
   },
   {
@@ -325,7 +355,8 @@
     }
    },
    "source": [
-    "Visualisoi vielä opetusjoukkoa kahden ensimmäisen PCA:n luomaa ominaisvektoria käyttäen"
+    "Visualisoi vielä opetusjoukkoa kahden ensimmäisen PCA:n luomaa ominaisvektoria käyttäen. Huom: Tämä solu kannattaa\n",
+    "ajaa kahdesti, jotta saa kuvan näkyviin."
    ]
   },
   {
@@ -382,7 +413,9 @@
    "source": [
     "## Luokittelu\n",
     "\n",
-    "Datan esikäsittelyn jälkeen voidaan siirtyä luokitteluun.\n",
+    "Datan esikäsittelyn jälkeen voidaan siirtyä luokitteluun. Kokeile ensin yhdellä algoritmilla ja käy läpi osiot \n",
+    "[Opettaminen](#Opettaminen) ja [Testaaminen](#Testaaminen), jonka jälkeen voit toistaa samat vaiheet muilla\n",
+    "algoritmeilla.\n",
     "\n",
     "### Opettaminen\n",
     "Luo opetettu malli käyttäen algoritmia [KNeighborsClassifier](https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsClassifier.html#sklearn.neighbors.KNeighborsClassifier)"
@@ -407,7 +440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Opeta [RF](https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html)"
+    "Opeta [RF](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html)"
    ]
   },
   {
@@ -636,7 +669,7 @@
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
-    "print(cm)\n"
+    "print(cm)"
    ]
   },
   {
@@ -658,7 +691,7 @@
    "outputs": [],
    "source": [
     "from utils import plot_confusion_matrix\n",
-    "plot_confusion_matrix(cm, [0,1,2], list(dataset.target_names), normalize=False)\n"
+    "plot_confusion_matrix(cm, [0,1,2], list(dataset.target_names), normalize=False)"
    ]
   },
   {
@@ -805,7 +838,7 @@
     "\n",
     "Esikäsittely, kuten standardointi ja PCA suoritetaan normaalisti hieman eri tavalla ristivalidointia käytettäessä hyperparametrioptimoinnissa, mutta siitä kerrotaan lisää seuraavassa harjoituksessa.\n",
     "\n",
-    "Hyperparametrioptimoinnin avuksi voi olla hyvä ottaa myös BayesSearchCV paketista \n",
+    "Hyperparametrioptimoinnin avuksi on hyvä ottaa työkaluksi myös BayesSearchCV paketista \n",
     "[scikit-optimize](https://scikit-optimize.github.io/notebooks/sklearn-gridsearchcv-replacement.html).\n",
     "\n"
    ]
