--- a/Solutions/Harjoitus_Sklearn_2.ipynb
+++ b/Solutions/Harjoitus_Sklearn_2.ipynb
@@ -24,9 +24,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Kuvien käyttäminen datana\n",
-    "Aloita lataamalla harjoitusdata. Tällä kertaa käytetään [MNIST](https://en.wikipedia.org/wiki/MNIST_database)-aineistoa,\n",
-    "joka sisältää käsinkirjoitettuja numeroita 0-9 8x8 pikselin kuvina."
+    "## Kuvien käyttäminen aineistona\n",
+    "Aloita lataamalla harjoitusdata. Tällä kertaa käytetään [MNIST](https://en.wikipedia.org/wiki/MNIST_database)\n",
+    "-aineistoa, joka sisältää käsinkirjoitettuja numeroita 0-9 8x8 pikselin kuvina.\n",
+    "\n",
+    "**Ongelma**: Voiko käsinkirjoitetun numeron tunnistaa kuvista?\n",
+    "\n",
+    "Aja alla oleva solu kaksi kertaa nähdäksesi kuvan."
    ]
   },
   {
@@ -53,7 +57,7 @@
     "print(\"Esimerkkikuva pikseliarvoina: \\n\", dataset.images[0])\n",
     "\n",
     "# dataset-olio tarjoaa havainnot myös valmiiksi prosessoituna yhdeksi vektoriksi/listaksi\n",
-    "print(\"Esimerkkikuva havaintovektorina: \\n\", dataset.data[0])\n"
+    "print(\"Esimerkkikuva havaintovektorina: \\n\", dataset.data[0])"
    ]
   },
   {
@@ -88,9 +92,6 @@
     }
    },
    "source": [
-    "Nyt edellistä harjoitusta hyväksi käyttäen suorita vaiheet ja luokittele malli haluamallasi algoritmilla \n",
-    "ja parametreilla. Yritä päästä yleiseen tarkkuuteen OA>=0.9.\n",
-    "\n",
     "Jaa luomasi X ja luokat y opetus- ja testijoukkoihin `X_train, X_test, y_train ja  y_test` siten, \n",
     "että testijoukon osuus on 20% ja opetusjoukon osuus on 80% havainnoista. \n",
     "Käytä jaossa `random_state`-parametrin arvona 42"
@@ -116,13 +117,31 @@
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    },
    "source": [
-    "## Esikäsittely\n",
-    "Suorita standardointi."
+    "## Luokittelu\n",
+    "Nyt edellistä harjoitusta hyväksi käyttäen suorita vaiheet ja luokittele malli haluamallasi algoritmilla \n",
+    "ja parametreilla. Yritä päästä yleiseen tarkkuuteen OA>=0.9.\n",
+    "\n",
+    "Muista suorittaa myös standardointi."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Esikäsittele ja opeta\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -134,10 +153,14 @@
    },
    "outputs": [],
    "source": [
-    "# Evaluoi\n",
+    "# Evaluoi luomasi malli\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "from utils import plot_confusion_matrix"
+    "from utils import plot_confusion_matrix\n",
+    "\n",
+    "\n",
+    "# Poista kommentti alta kun olet valmis\n",
+    "#plot_confusion_matrix(cm, list(range(len(dataset.target_names))), list(dataset.target_names), normalize=True)"
    ]
   },
   {
