--- a/Solutions/Harjoitus_pellot.ipynb
+++ b/Solutions/Harjoitus_pellot.ipynb
@@ -81,7 +81,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tarkastelemalla yllä olevaa tulostetta huomaat, että `KASVULOHKOTUNNUS` ei ole numeerinen arvo. Ennen luokittelua se on syytä muuttaa numeeriseksi. Yksi tapa tehdä tämä on muuttaa. [Jätetään](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.drop.html) samalla pois alkuperäinen kasvikoodi `KVI_KASVIKOODI` ja lajikekoodi `KLE_LAJIKEKOODI`."
+    "Tarkastelemalla yllä olevaa tulostetta huomaat, että `KASVULOHKOTUNNUS` ei ole numeerinen arvo. \n",
+    "Ennen luokittelua se on syytä muuttaa numeeriseksi. Yksi tapa tehdä tämä on muuttaa. \n"
    ]
   },
   {
@@ -93,6 +94,16 @@
     "parcel_tunnus_dict = {i: x for x, i in enumerate(sorted(parcels['KASVULOHKOTUNNUS'].unique()))}\n",
     "print(parcel_tunnus_dict)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "[Jätetään](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.drop.html) \n",
+    "samalla pois alkuperäinen kasvikoodi `KVI_KASVIKOODI` ja lajikekoodi `KLE_LAJIKEKOODI`."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -133,7 +144,6 @@
     "X = parcels_modified[[\n",
     " #'X',\n",
     " #'Y',\n",
-    " #'fid',\n",
     " #'VUOSI',\n",
     " #'KASVULOHKOTUNNUS',\n",
     " #'LUOMUVKD_KOODI',\n",
@@ -202,7 +212,10 @@
    "metadata": {},
    "source": [
     "## Luokittelu\n",
-    "Muodosta sitten putki ([`Pipeline`](https://scikit-learn.org/stable/modules/generated/sklearn.pipeline.Pipeline.html#sklearn.pipeline.Pipeline)), johon liität StandardScaler ja PCA esikäsittelyvaiheet, käytä PCA:n `n_components`-parametrina arvoa 0.7. Lisää putken viimeiseksi komponentiksi haluamasi luokittelija nimelle \"clf\". Jos käytät Keras-luokittelijaa, muista luoda funktio sille oletusparametreilla."
+    "Muodosta sitten putki ([`Pipeline`](https://scikit-learn.org/stable/modules/generated/sklearn.pipeline.Pipeline.html#sklearn.pipeline.Pipeline)), \n",
+    "johon liität StandardScaler ja PCA esikäsittelyvaiheet, käytä PCA:n `n_components`-parametrina arvoa 0.7. \n",
+    "Lisää putken viimeiseksi komponentiksi haluamasi luokittelija nimelle \"clf\". Jos käytät Keras-luokittelijaa, \n",
+    "muista luoda funktio sille oletusparametreilla."
    ]
   },
   {
@@ -216,6 +229,25 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.pipeline import Pipeline\n",
     "\n",
+    "from tensorflow import keras\n",
+    "\n",
+    "def build_fn(first_dense_units=100, dropout_rate=0.2):\n",
+    "    model = keras.models.Sequential()\n",
+    "    model.add(keras.layers.Flatten(input_shape=(len(X_train.columns), )))\n",
+    "    model.add(keras.layers.Dense(first_dense_units, activation=\"relu\"))\n",
+    "    model.add(keras.layers.Dropout(dropout_rate))\n",
+    "    model.add(keras.layers.Dense(len(y_train.unique()), activation=\"softmax\"))\n",
+    "    \n",
+    "    print(model.summary())\n",
+    "    \n",
+    "    model.compile(optimizer='adam',\n",
+    "                  loss='sparse_categorical_crossentropy',\n",
+    "                  metrics=['accuracy'])\n",
+    "    return model\n",
+    "\n",
+    "clf_keras = keras.wrappers.scikit_learn.KerasClassifier(build_fn)\n",
+    "\n",
+    "pipeKeras = Pipeline([('scaler', StandardScaler()), ('clf',clf_keras)]) # keras\n",
     "pipe = Pipeline([('scaler', StandardScaler()), ('pca',PCA(n_components=0.7)), ('clf',SVC())])"
    ]
   },
@@ -223,12 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Suorita sitten hyperparametrioptimointi. Putkitusta käytettäessä laita parametrisanakirjaan luokittelijakomponentin nimi ja kaksi alaviivaa ennen parametrin nimeä. Esimerkiksi SVM-algoritmin `C`-parametrin tapauksessa:\n",
-    "```python\n",
-    "params_without_pipeline = {'C':[1,10]}\n",
-    "params_with_pipeline = {'clf__C':[1,10]}\n",
-    "\n",
-    "```"
+    "Luodaan sitten hyperparametrioptimoinnin tekevä opetusfunktio."
    ]
   },
   {
@@ -249,12 +276,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Suorita sitten hyperparametrioptimointi. Anna toiseksi parametriksi sanakirja hyperparametreista.\n",
+    "\n",
+    " Putkitusta käytettäessä laita parametrisanakirjaan luokittelijakomponentin nimi ja kaksi alaviivaa ennen parametrin nimeä. Esimerkiksi SVM-algoritmin `C`-parametrin tapauksessa:\n",
+    "```python\n",
+    "params_without_pipeline = {'C':[1,10]}\n",
+    "params_with_pipeline = {'clf__C':[1,10]}\n",
+    "\n",
+    "```\n",
+    " \n",
+    " Jos käytät Keras-mallia, aseta parametreiksi ainakin \n",
+    "epochs ja batch_size, esimerkiksi: `{'clf__epochs':[10], 'clf__batch_size':[10]}`.\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "clf = train(pipe, {'clf__C':[1], 'clf__gamma':[1]})\n",
+    "# clf = train(pipeKeras, {'clf__epochs':[10], 'clf__batch_size':[10]}) # keras\n",
     "y_pred = clf.predict(X_test)"
    ]
   },
@@ -334,7 +384,11 @@
     "pipe_imb = Pipeline_imb([('scaler', StandardScaler()), \n",
     "                         ('pca',PCA(n_components=0.9)), \n",
     "                         ('rus', RandomUnderSampler('not minority')),\n",
-    "                         ('clf',SVC())])"
+    "                         ('clf',SVC())])\n",
+    "\n",
+    "pipe_imb_keras = Pipeline_imb([('scaler', StandardScaler()), \n",
+    "                         ('rus', RandomUnderSampler('not minority')),\n",
+    "                         ('clf',clf_keras)])"
    ]
   },
   {
@@ -354,6 +408,7 @@
    "outputs": [],
    "source": [
     "clf = train(pipe_imb, {'clf__C':[1, 10], 'clf__gamma':[0.1, 0.01, 1]})\n",
+    "# clf = train(pipe_imb_keras, {'clf__epochs':[10], 'clf__batch_size':[10]}) # keras\n",
     "y_pred = clf.predict(X_test)\n",
     "evaluate(y_pred)"
    ]
