--- a/Solutions/Harjoitus_viinit.ipynb
+++ b/Solutions/Harjoitus_viinit.ipynb
@@ -12,7 +12,8 @@
     "**Ongelma**: Voiko viinin laadun päätellä viiniä kuvaavien arvojen perusteella?\n",
     "\n",
     "## Data lataus\n",
-    "Lataa Pandas DataFrame-olioina aineistot \"../winequality-red.csv\" ja \"../winequality-white.csv\"."
+    "Lataa Pandas DataFrame-olioina aineistot \"../../ml-datasets/winequality-red.csv\" ja \n",
+    "\"../../ml-datasets/winequality-white.csv\"."
    ]
   },
   {
@@ -32,7 +33,7 @@
     "    return wine\n",
     "    \n",
     "red = process_data(\"../../ml-datasets/winequality-red.csv\", 0)\n",
-    "white = process_data(\".../../ml-datasets/winequality-white.csv\", 1)\n",
+    "white = process_data(\"../../ml-datasets/winequality-white.csv\", 1)\n",
     "\n",
     "wine = pd.concat([red, white])\n",
     "# Sample sekoittaa aineiston, frac=1 tarkoittaa palauttaa koko aineiston\n",
@@ -44,7 +45,7 @@
    "metadata": {},
    "source": [
     "## Datan esikäsittely\n",
-    "Quality-arvo vaikuttaa siltä, että se ei ala nollasta. Tarkistetaan tilanne. Muuta se alkamaan 0:sta"
+    "Quality-arvo vaikuttaa siltä, että se ei ala nollasta. Tarkistetaan tilanne. "
    ]
   },
   {
@@ -55,6 +56,15 @@
    "source": [
     "wine.quality.unique()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Muuta se alkamaan 0:sta"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -127,7 +137,8 @@
    "metadata": {},
    "source": [
     "##### Datan visualisointia\n",
-    "Visualisoidaan opetusjoukkoa hieman ongelman hahmottamiseksi. Koska valitsemiesi muuttujien määrä voi olla enemmän kuin 2, käytetään PCA-analyysiä visualisoinnin tukena. "
+    "Visualisoidaan opetusjoukkoa hieman ongelman hahmottamiseksi. Koska valitsemiesi muuttujien määrä voi olla enemmän \n",
+    "kuin 2, käytetään PCA-analyysiä visualisoinnin tukena. Muista ajaa alla oleva solu toisen kerran, jos kuva ei heti ilmesty."
    ]
   },
   {
@@ -166,7 +177,10 @@
    },
    "source": [
     "## Luokittelu\n",
-    "Muodosta sitten putki ([`Pipeline`](https://scikit-learn.org/stable/modules/generated/sklearn.pipeline.Pipeline.html#sklearn.pipeline.Pipeline)), johon liität StandardScaler ja PCA esikäsittelyvaiheet, käytä PCA:n `n_components`-parametrina arvoa 0.9. Lisää putken viimeiseksi komponentiksi haluamasi luokittelija nimelle \"clf\". Jos käytät Keras-luokittelijaa, muista luoda funktio sille oletusparametreilla."
+    "Muodosta sitten putki ([`Pipeline`](https://scikit-learn.org/stable/modules/generated/sklearn.pipeline.Pipeline.html#sklearn.pipeline.Pipeline)), \n",
+    "johon liität StandardScaler ja halutessasi PCA esikäsittelyvaiheet. Lisää putken viimeiseksi\n",
+    " komponentiksi haluamasi luokittelija nimelle \"clf\". Jos käytät Keras-luokittelijaa, \n",
+    " muista luoda funktio sille oletusparametreilla."
    ]
   },
   {
@@ -183,7 +197,26 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.pipeline import Pipeline\n",
+    "from tensorflow import keras\n",
     "\n",
+    "def build_fn(first_dense_units=100, dropout_rate=0.2):\n",
+    "    model = keras.models.Sequential()\n",
+    "    model.add(keras.layers.Flatten(input_shape=(len(X_train.columns), )))\n",
+    "    model.add(keras.layers.Dense(first_dense_units, activation=\"relu\"))\n",
+    "    model.add(keras.layers.Dropout(dropout_rate))\n",
+    "    model.add(keras.layers.Dense(len(y_train.unique()), activation=\"softmax\"))\n",
+    "    \n",
+    "    print(model.summary())\n",
+    "    \n",
+    "    model.compile(optimizer='adam',\n",
+    "                  loss='sparse_categorical_crossentropy',\n",
+    "                  metrics=['accuracy'])\n",
+    "    return model\n",
+    "\n",
+    "clf = keras.wrappers.scikit_learn.KerasClassifier(build_fn)\n",
+    "\n",
+    "# Jos käytetään PCA:ta, keras mallin input pitää soveltaa sopivaksi. Silloin n_components tulisi olla kokonaisluku\n",
+    "pipeKeras = Pipeline([('scaler', StandardScaler()), ('clf',clf)]) # keras\n",
     "pipe = Pipeline([('scaler', StandardScaler()), ('pca',PCA(n_components=0.9)), ('clf',SVC())])"
    ]
   },
@@ -191,12 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Suorita sitten hyperparametrioptimointi. Putkitusta käytettäessä laita parametrisanakirjaan luokittelijakomponentin nimi ja kaksi alaviivaa ennen parametrin nimeä. Esimerkiksi SVM-algoritmin `C`-parametrin tapauksessa:\n",
-    "```python\n",
-    "params_without_pipeline = {'C':[1,10]}\n",
-    "params_with_pipeline = {'clf__C':[1,10]}\n",
-    "\n",
-    "```"
+    "Luodaan sitten hyperparametrioptimoinnin tekevä opetusfunktio."
    ]
   },
   {
@@ -246,8 +274,7 @@
     "def evaluate(y_pred):\n",
     "    cm = confusion_matrix(y_test, y_pred)\n",
     "    print(classification_report(y_test, y_pred))\n",
-    "    plot_confusion_matrix(cm,list(range(y_pred.max()+1)), list(range(y_pred.max()+1)), normalize=True)\n",
-    "evaluate(y_pred)"
+    "    plot_confusion_matrix(cm,list(range(y_pred.max()+1)), list(range(y_pred.max()+1)), normalize=True)"
    ]
   },
   {
@@ -255,7 +282,17 @@
    "metadata": {},
    "source": [
     "##### Mallin opettaminen ja evaluointi\n",
-    "Anna toiseksi parametriksi sanakirja hyperparametreista."
+    "Anna toiseksi parametriksi sanakirja hyperparametreista.\n",
+    "\n",
+    " Putkitusta käytettäessä laita parametrisanakirjaan luokittelijakomponentin nimi ja kaksi alaviivaa ennen parametrin nimeä. Esimerkiksi SVM-algoritmin `C`-parametrin tapauksessa:\n",
+    "```python\n",
+    "params_without_pipeline = {'C':[1,10]}\n",
+    "params_with_pipeline = {'clf__C':[1,10]}\n",
+    "\n",
+    "```\n",
+    " \n",
+    " Jos käytät Keras-mallia, aseta parametreiksi ainakin \n",
+    "epochs ja batch_size, esimerkiksi: `{'clf__epochs':[10], 'clf__batch_size':[10]}`."
    ]
   },
   {
@@ -265,6 +302,7 @@
    "outputs": [],
    "source": [
     "clf = train(pipe, {'clf__C':[1, 10, 100], 'clf__gamma':[1, 0.1, 0.01]})\n",
+    "# clf = train(pipeKeras, {'clf__epochs':[10], 'clf__batch_size':[10]}) # keras\n",
     "y_pred = clf.predict(X_test)\n",
     "evaluate(y_pred)"
    ]
