--- a/Solutions/Harjoitus_Keras_2.ipynb
+++ b/Solutions/Harjoitus_Keras_2.ipynb
@@ -122,12 +122,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Käännä ylläolevaa funktiota käyttäen ensimmäinen havainto sanoiksi"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Ensimmäinen havainto sanoina:\\n\", translate(X_train[0]))"
+    "translated = translate(X_train[0])\n",
+    "print(\"Ensimmäinen havainto sanoina:\\n\", translated)"
    ]
   },
   {
@@ -170,6 +180,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Muodosta samalla tavall myös `X_test_padded`."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
@@ -178,17 +197,37 @@
     "X_test_padded = keras.preprocessing.sequence.pad_sequences(X_test,\n",
     "                                            value=word_index[\"<PAD>\"],\n",
     "                                            padding='post',\n",
-    "                                            maxlen=256)\n",
-    "\n",
-    "print(X_train_padded[0])\n",
-    "print(translate(X_train_padded[0]))"
+    "                                            maxlen=256)"
    ]
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## Mallin luominen\n",
-    "Jaa seuraavaksi opetusjoukko vielä erikseen opetus- ja validointijoukkouhin käyttäen \n",
+    "Katso vielä miltä uudet muokatut arvostelut näyttävät "
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(X_train_padded[0])\n",
+    "print(translate(X_train_padded[0]))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Jaa seuraavaksi opetusjoukko vielä erikseen opetus- ja validointijoukkouhin käyttäen tuttua\n",
     "[`train_test_split`](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html)-metodia \n",
     "siten, että opetusjoukon osuus on 80% ja validointijoukon osuus on 20% alkuperäisen opetusjoukon koosta. \n",
     "\n",
@@ -214,6 +253,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Mallin luominen\n",
     "Luo ja kokoa malli `create_model`-funktion avulla. Käytä ensimmäisen harjoituksen tapaan [Sequential](https://keras.io/getting-started/sequential-model-guide/)\n",
     "-luokkaa.\n",
     "\n",
@@ -221,7 +261,8 @@
     "1. Ensimmäinen taso on [Embedding](https://keras.io/layers/embeddings/#embedding), jonka avulla on mahdollista luoda\n",
     "   sulautettu moniulotteinen Dense-taso sanaston koon perusteella. Anna `input_dim` arvoksi sanaston koko ja `output_dim` \n",
     "   arvoksi haluamasi Dense-tason koko (esimerkiksi 16).\n",
-    "2. Toinen taso on [GlobalAveragePooling1D](https://keras.io/layers/pooling/#globalaveragepooling1d), joka \n",
+    "2. Toinen taso on [GlobalAveragePooling1D](https://keras.io/layers/pooling/#globalaveragepooling1d), jonka avulla\n",
+    "    on mahdollista\n",
     "3. Kolmanneksi tasoksi aseta [Dense](https://keras.io/layers/core/#Dense) ja sen kooksi haluamasi koko. \n",
     "   Aseta sen aktivointifunktioksi \"relu\"\n",
     "4. Voit asettaa lisää Dense-tasoja halutessasi \n",
@@ -262,7 +303,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Opetaaminen\n",
+    "## Opettaminen\n",
     "Opeta nyt luomasi malli käyttäen `validation_data`-parametrina validointijoukkoa `(X_val, y_val)`. Aseta `batch_size`-\n",
     "ja `epoch`-parametrit haluamiksesi."
    ],
@@ -279,7 +320,7 @@
     "model = create_model()\n",
     "history = model.fit(X_train,\n",
     "                    y_train,\n",
-    "                    epochs=2,\n",
+    "                    epochs=10,\n",
     "                    batch_size=512,\n",
     "                    validation_data=(X_val, y_val),\n",
     "                    verbose=1)"
@@ -289,7 +330,7 @@
    "cell_type": "markdown",
    "source": [
     "## Evaluoiminen\n",
-    "Evaluoi nyt luomasi malli käyttäen 1000 ensimmäistä testijoukon havaintoa."
+    "Evaluoi nyt luomasi malli testijoukolla"
    ],
    "metadata": {
     "collapsed": false
@@ -305,11 +346,20 @@
    },
    "outputs": [],
    "source": [
-    "evaluation = model.evaluate(X_test[:1000], y_test[:1000], batch_size=100)\n",
-    "print(\"Testijoukon häviö: {:.4f} OA: {:.4f}\".format(evaluation[0], evaluation[1]))\n",
-    "\n",
-    "\n"
+    "evaluation = model.evaluate(X_test[:1000], y_test, batch_size=100, verbose=False)\n",
+    "print(\"Testijoukon häviö: {:.4f} OA: {:.4f}\".format(evaluation[0], evaluation[1]))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Mallin muokkaaminen\n",
+    "Muuta nyt mallia kohdassa [Mallin luominen](#Mallin-luominen) ja aja sen jälkeen solut [Opettaminen](#Opettaminen)\n",
+    "ja [Evaluoiminen](#Evaluoiminen). Yritä saada OA>=0.9."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
