--- a/Notebooks/Harjoitus_Keras_2.ipynb
+++ b/Notebooks/Harjoitus_Keras_2.ipynb
@@ -136,7 +136,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "translated = translate(X_train[0])\n",
+    "translated = None\n",
+    "assert translated\n",
     "print(\"Ensimmäinen havainto sanoina:\\n\", translated)"
    ]
   },
@@ -173,10 +174,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_padded = keras.preprocessing.sequence.pad_sequences(X_train,\n",
-    "                                            value=word_index[\"<PAD>\"],\n",
-    "                                            padding='post',\n",
-    "                                            maxlen=256)"
+    "X_train_padded = None\n",
+    "assert X_train_padded"
    ]
   },
   {
@@ -194,10 +193,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test_padded = keras.preprocessing.sequence.pad_sequences(X_test,\n",
-    "                                            value=word_index[\"<PAD>\"],\n",
-    "                                            padding='post',\n",
-    "                                            maxlen=256)"
+    "X_test_padded = None\n",
+    "assert X_test_padded"
    ]
   },
   {
@@ -246,8 +243,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X_train_padded, y_train, test_size=0.2, random_state=42)"
+    "X_train, X_val, y_train, y_val = None, None, None, None\n",
+    "assert X_train"
    ]
   },
   {
@@ -286,17 +283,8 @@
    "outputs": [],
    "source": [
     "def create_model():\n",
-    "    model = keras.models.Sequential()\n",
-    "    model.add(keras.layers.Embedding(10000, 16))\n",
-    "    model.add(keras.layers.GlobalAveragePooling1D())\n",
-    "    model.add(keras.layers.Dense(16, activation=\"relu\"))\n",
-    "    model.add(keras.layers.Dense(1, activation=\"sigmoid\"))\n",
-    "    \n",
+    "    model = None\n",
     "    print(model.summary())\n",
-    "    \n",
-    "    model.compile(optimizer='adam',\n",
-    "              loss='binary_crossentropy',\n",
-    "              metrics=['acc'])\n",
     "    return model"
    ]
   },
@@ -318,12 +306,7 @@
    "outputs": [],
    "source": [
     "model = create_model()\n",
-    "history = model.fit(X_train,\n",
-    "                    y_train,\n",
-    "                    epochs=10,\n",
-    "                    batch_size=512,\n",
-    "                    validation_data=(X_val, y_val),\n",
-    "                    verbose=1)"
+    "history = model.fit(None)"
    ]
   },
   {
